# paperkb

./: .gitignore  README.md  pyproject.toml
paperkb/: pyproject.toml
paperkb/src/paperkb/: __init__.py
src/paperkb/: __init__.py  __main__.py  citation.py  cli.py  config.py  indexer.py  models.py  search.py  storage.py  utils.py
