[project]
name = "paperkb"
version = "0.1.0"
description = "A local CLI knowledge base for research papers."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0,<2.11",
    "pymupdf>=1.24.0,<1.25",
    "pyyaml>=6.0.0,<7",
    "rapidfuzz>=3.0.0,<4",
    "rich>=13.0.0,<14",
    "typer>=0.12.0,<0.17",
    "typing-extensions>=4.0.0",
]

[project.scripts]
paperkb = "paperkb.cli:app"

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"
