[project]
name = "paperkb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "samuellee77", email = "hsl023@ucsd.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.5",
    "rich>=15.0.0",
    "typer>=0.26.5",
]

[project.scripts]
paperkb = "paperkb:main"

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"
